--- a/gsf-api/src/main/resources/META-INF/resources/css/procedimentos.css
+++ b/gsf-api/src/main/resources/META-INF/resources/css/procedimentos.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700");
 
 *,
@@ -16,14 +17,16 @@
     background-color: rgb(170, 102, 204);
     position: fixed;
     width: 100%;
+    height: 8%;
     z-index: 5;
-    -webkit-box-shadow: 2px 2px 5px 0px rgba(160, 160, 160, 1);
-    -moz-box-shadow: 2px 2px 5px 0px rgba(160, 160, 160, 1);
-    box-shadow: 2px 2px 5px 0px rgba(160, 160, 160, 1);
+    -webkit-box-shadow: 2px 2px 5px 0 rgba(160, 160, 160, 1);
+    -moz-box-shadow: 2px 2px 5px 0 rgba(160, 160, 160, 1);
+    box-shadow: 2px 2px 5px 0 rgba(160, 160, 160, 1);
 }
 
 .item {
     color: white;
+    margin-left: 30px;
 }
 
 .item:hover {
@@ -127,7 +130,7 @@ html {
 
 body {
     background-color: hsl(0, 0%, 100%);
-    background-color: var(--color-bg, white)
+    background-color: var(--color-bg, white);
 }
 
 article,
@@ -4239,4 +4242,18 @@ body {
 .tempo.badge {
 
     background-color: rgb(170, 102, 204);
+}
+
+footer
+{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: rgb(0, 0, 0);
+}
+
+footer p
+{
+    padding-left: 5%;
 }
