--- a/gsf-api/src/main/resources/META-INF/resources/css/geral.css
+++ b/gsf-api/src/main/resources/META-INF/resources/css/geral.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center
+    align-items: center;
 }
 
 .square
