--- a/gsf-api/src/main/resources/META-INF/resources/css/home.css
+++ b/gsf-api/src/main/resources/META-INF/resources/css/home.css
@@ -44,14 +44,14 @@ img
 
 .square_gestante, .square_medico
 {
-    box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 9px;
     padding: 20px 20px 20px 20px;
     margin: 20px 30px 0 30px;
     position: relative;
     width: 600px;
     height: 400px;
-    background-color:rgb(220, 220, 220, 0.5);
+    background-color:rgba(220, 220, 220, 0.5);
     float: left;
 }
 
