--- a/gsf-api/src/main/resources/META-INF/resources/css/home.css
+++ b/gsf-api/src/main/resources/META-INF/resources/css/home.css
@@ -38,8 +38,6 @@ img
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 20px 20px 20px 20px;
-    margin-top: 80px;
 }
 
 .square_gestante, .square_medico
@@ -49,8 +47,8 @@ img
     padding: 20px 20px 20px 20px;
     margin: 20px 30px 0 30px;
     position: relative;
-    width: 600px;
-    height: 400px;
+    width: 25%;
+    height: 350px;
     background-color:rgb(220, 220, 220, 0.5);
     float: left;
 }
