--- a/gsf-api/src/main/resources/META-INF/resources/css/home.css
+++ b/gsf-api/src/main/resources/META-INF/resources/css/home.css
@@ -40,7 +40,7 @@ img
     justify-content: center;
 }
 
-.square_gestante, .square_medico
+.square_paciente, .square_medico
 {
     box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 0.2);
     border-radius: 9px;
