--- a/gsf-api/src/main/resources/META-INF/resources/css/cadastro_paciente.css
+++ b/gsf-api/src/main/resources/META-INF/resources/css/cadastro_paciente.css
@@ -6,72 +6,7 @@ body
 }
 
 /* CSS Campos --- */
-#campo_nome
-{
-    size: 3;
-    width: 60%;
-    text-align: center;
-    height: 25px;
-    border-radius: 20px;
-    display: block;
-    margin: 10px auto;
-    opacity: 0.5;
-    border: 1px solid rgb(0, 0, 0);
-}
-
-#campo_cpf
-{
-    size: 3;
-    width: 60%;
-    text-align: center;
-    height: 25px;
-    border-radius: 20px;
-    display: block;
-    margin: 10px auto;
-    opacity: 0.5;
-    border: 1px solid rgb(0, 0, 0);
-}
-
-#campo_inicio
-{
-    size: 3;
-    width: 60%;
-    text-align: center;
-    height: 25px;
-    border-radius: 20px;
-    display: block;
-    margin: 10px auto;
-    opacity: 0.5;
-    border: 1px solid rgb(0, 0, 0);
-}
-
-#campo_email
-{
-    size: 3;
-    width: 60%;
-    text-align: center;
-    height: 25px;
-    border-radius: 20px;
-    display: block;
-    margin: 10px auto;
-    opacity: 0.5;
-    border: 1px solid rgb(0, 0, 0);
-}
-
-#campo_senha
-{
-    size: 3;
-    width: 60%;
-    text-align: center;
-    height: 25px;
-    border-radius: 20px;
-    display: block;
-    margin: 10px auto;
-    opacity: 0.5;
-    border: 1px solid rgb(0, 0, 0);
-}
-
-#campo_confirmar_senha
+.campo
 {
     size: 3;
     width: 60%;
